Fix donate z-index

--- a/server/modules/@apostrophecms/home-page/ui/src/index.scss
+++ b/server/modules/@apostrophecms/home-page/ui/src/index.scss
@@ -385,7 +385,6 @@
 
 .pdl-home__donate {
   position: relative;
-  margin-top: -60px;
-  z-index: 4;
+  z-index: 2;
   width: 100vw;
 }
